Issue SB-10808 fix: Scores are now aligned properly at the end of content player

--- a/player/public/coreplugins/org.sunbird.player.endpage-1.1/renderer/templates/style.css
+++ b/player/public/coreplugins/org.sunbird.player.endpage-1.1/renderer/templates/style.css
@@ -390,3 +390,12 @@ table {
 .buttonHide {
   visibility: hidden;
 }
+.ps-score-divider {
+  border-bottom: 2px solid #C8C8C8;
+  margin-left: 3vw;
+  margin-right: 3vw;
+}
+
+.ps-score-data-padding-top {
+  padding-top: 3px;
+}
